--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask==3.0.0
-flask-cors==4.0.0
-spacy==3.7.2
-pymusas==0.3.0
-gunicorn==21.2.0
+flask
+flask_cors
+spacy
+# This line installs the 'en_core_web_sm' model
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+pymusas
+PyMuPDF
